--- a/css/services.css
+++ b/css/services.css
@@ -61,10 +61,10 @@ section.text article {
 .formsec {
   flex: 1;
   /* width: 200px; */
-  display: flex;
+  /* display: flex; */
   /* width: 200px; */
 
-  flex-direction: row;
+  /* flex-direction: row; */
 }
 h3 {
   margin-bottom: 0.5rem;
