--- a/css/about.css
+++ b/css/about.css
@@ -17,6 +17,7 @@ nav section a {
 }
 nav section h1 {
   color: white;
+  font-size: 1.5rem;
 }
 span {
   color: rgba(238, 118, 238, 0.808);
@@ -50,7 +51,7 @@ main.text {
   gap: 1rem 3rem;
 }
 .aboutus article p {
-  line-height: 1.2rem;
+  line-height: 1.4rem;
 }
 main.text section {
   display: flex;
@@ -63,6 +64,7 @@ main.text section.aboutus {
 main.text section.what {
   flex: 1;
   height: fit-content;
+  line-height: 1.4rem;
 
   /* justify-content: space-evenly; */
 
@@ -71,7 +73,7 @@ main.text section.what {
   padding: 1rem;
 }
 main.text section.what h1 {
-  margin-top: 1.5rem;
+  margin-top: 1rem;
 }
 main.text section.aboutus h1 {
   margin-bottom: 1rem;
